<?xml version="1.0"?>
<package format="3">
  <name>controller_navigation</name>
  <version>0.0.0</version>
  <description>Custom navigation nodes for Linorobot2</description>

  <maintainer email="rens@example.com">rens</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
